--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@ ul.posts span {
 .site header nav ul li {
   float: left;
   list-style: none;
-  margin-right: 1em;
+  margin-right: 10px;
 }
 .site header nav ul li a {
   /*color: #544738;*/
@@ -160,7 +160,7 @@ ul.posts span {
   text-decoration: none;
   float: left;
   font-size: 21px;
-  padding: 20px;
+  padding: 12px;
 }
 .site header nav ul li a:hover {
   /*color: #7eb9be;*/
