--- a/css/main.css
+++ b/css/main.css
@@ -201,26 +201,29 @@ to {
 .site .meta {
   color: #aaa;
 }
-.site .footer {
+.site footer {
   font-size: 80%;
   color: #666;
   border-top: 4px solid #eee;
   margin-top: 2em;
   overflow: hidden;
 }
-.site .footer .contact {
+.site footer a {
+  font-size: 18px;
+}
+.site footer .contact {
   float: left;
   margin-right: 3em;
 }
-.site .footer .contact a {
+.site footer .contact a {
   color: #8085C1;
 }
-.site .footer .rss {
+.site footer .rss {
   margin-top: 1.1em;
   margin-right: -0.2em;
   float: right;
 }
-.site .footer .rss img {
+.site footer .rss img {
   border: 0;
 }
 /*****************************************************************************/
