--- a/css/main.css
+++ b/css/main.css
@@ -103,12 +103,14 @@ ul.posts span {
   text-decoration: none;
 }
 .site header .logo :hover {
-  -webkit-transition: All 2s ease-in-out;
-  -moz-transition: All 5s ease-in-out;
-  -o-transition: All 5s ease-in-out;
+  -webkit-transition: All 3s ease-in-out;
+  -moz-transition: All 3s ease-in-out;
+  -o-transition: All 3s ease-in-out;
+  transition: All 3s ease-out;
   -webkit-transform: rotate(-10deg) scale(1.2) translate(20px, -50px);
   -moz-transform: rotate(-10deg) scale(1.2) translate(20px, -50px);
   -o-transform: rotate(-10deg) scale(1.2) translate(20px, -50px);
+  transform: rotate(-10deg) scale(1.2) translate(20px, -50px);
 }
 .site header .logo img {
   position: absolute;
@@ -170,17 +172,21 @@ ul.posts span {
   -webkit-transition: All 0.5s ease-in-out;
   -moz-transition: All 0.5s ease-in-out;
   -o-transition: All 0.5s ease-in-out;
+  transition: All 0.5s ease-in-out;
   -webkit-transform: rotate(-10deg) scale(1.2);
   -moz-transform: rotate(-10deg) scale(1.2);
   -o-transform: rotate(-10deg) scale(1.2);
+  transform: rotate(-10deg) scale(1.2);
 }
 .site header nav ul .even a:hover {
   -webkit-transition: All 0.5s ease-in-out;
   -moz-transition: All 0.5s ease-in-out;
   -o-transition: All 0.5s ease-in-out;
+  transition: All 0.5s ease-in-out;
   -webkit-transform: rotate(10deg) scale(1.2);
   -moz-transform: rotate(10deg) scale(1.2);
   -o-transform: rotate(10deg) scale(1.2);
+  transform: rotate(-10deg) scale(1.2);
 }
 /*Anitmation
 li a:hover {
