--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
+  font-size: 100%; 
+}
 
 h1 { margin-bottom: 1em; }
 p { margin: 1em 0; }
@@ -69,6 +70,8 @@ ul.posts span {
 }
 
 .site .header a {
+    font-family: 'Audiowide', cursive;
+
   font-weight: bold;
   text-decoration: none;
 }
