--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-
-        <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
+        {% feed_meta %}
+        <link href='//fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
         
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
