Adds theme class

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,7 @@
-/*****************************************************************************/
-/*
-/* Common
-/*
-/*****************************************************************************/
+---
+---
+
+@import "{{ site.theme }}";
 
 /* Global Reset */
 * {
