--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,8 @@
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
               <a class="extra" href="/personal-growth">growth</a>
+              <a class="extra" href="/midjourney.html">midjourney</a>
+              
             </div>
 
                 {{ content }}
