--- a/css/main.scss
+++ b/css/main.scss
@@ -92,6 +92,7 @@ font-size: 200%;
 .site .header a.extra {
   color: #aaa;
   margin-left: 1em;
+  font-size: 65%;
 }
 
 .site .header a.extra:hover {
@@ -165,4 +166,13 @@ font-size: 200%;
 
 .post pre.terminal code {
   background-color: #333;
+}
+
+/*****************************************************************************/
+/*
+/* Images
+/*
+/*****************************************************************************/
+.prompt {
+  white-space: pre-wrap;
 }
