Adds all the webcomics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
               <a class="extra" href="/">home</a>
               <a class="extra" href="/personal-growth">growth</a>
               <a class="extra" href="/midjourney.html">midjourney</a>
+              <a class="extra" href="/webcomics.html">webcomics</a>
               
             </div>
 
