--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,14 +20,15 @@
         <div class="container">
           <div class="site">
           
-            <div class="header">
+            <header class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-              <a class="extra" href="/personal-growth">growth</a>
-              <a class="extra" href="/midjourney.html">midjourney</a>
-              <a class="extra" href="/webcomics.html">webcomics</a>
-              
-            </div>
+              <nav class="nav-links">
+                <a class="extra" href="/personal-growth">growth</a>
+                <a class="extra" href="/midjourney.html">midjourney</a>
+                <a class="extra" href="/webcomics.html">webcomics</a>
+                <a class="extra" href="/decks.html">decks</a>
+              </nav>
+            </header>
 
                 {{ content }}
 
