--- a/css/main.scss
+++ b/css/main.scss
@@ -73,7 +73,7 @@ ul.posts span {
     align-items: center; 
     width: 100%;
     margin-bottom: 1em;
-
+    position: relative;
     h1.title {
       margin: 0px;
       padding: 0px;
