--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,8 @@ comments: true
 ---
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
+<p class="meta">Reading time: {{ page.content | reading_time }}</p>
+
 <div class="post">
 {{ content }}
 </div>
