Adds Tweets code

--- a/css/main.scss
+++ b/css/main.scss
@@ -187,3 +187,42 @@ ul.posts span {
 .prompt {
   white-space: pre-wrap;
 }
+
+
+
+/*****************************************************************************/
+/*
+/* Twitter
+/*
+/*****************************************************************************/
+.twitter-menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start; /* Align items to the start */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.twitter-menu li {
+  margin-right: 10px; /* Right margin for spacing between items */
+  margin-bottom: 10px; /* Bottom margin for spacing between rows */
+  flex: 1 1 90px; /* Flex grow, shrink, and basis */
+}
+
+.twitter-menu a {
+  display: block;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #333;
+  background-color: #f4f4f4; /* Optional: background color for visibility */
+  text-align: center; /* Center-align text */
+  /* Add more styling as needed */
+}
+
+/* Responsive adjustments (optional) */
+@media screen and (max-width: 600px) {
+  .twitter-menu li {
+      flex-basis: 32%; /* Full width on small screens */
+  }
+}
