Fixes the links in the menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <nav class="nav-links">
                 <a class="extra" href="/personal-growth">growth</a>
-                <a class="extra" href="/midjourney.html">midjourney</a>
-                <a class="extra" href="/webcomics.html">webcomics</a>
+                <a class="extra" href="/tweets.html">tweets</a>
+                <a class="extra" href="/comics/{{site.data.comics.last.name | slugify}}.html">webcomics</a>
                 <a class="extra" href="/decks.html">decks</a>
               </nav>
             </header>
@@ -40,7 +40,7 @@
               <div class="contact">
                 <p>
                   Adam Hall<br />
-                  Web Developer<br />
+                  AI Specialist<br />
                   digiguru@gmail.com
                 </p>
               </div>
