--- a/_includes/comic-menu.html
+++ b/_includes/comic-menu.html
@@ -1,8 +1,16 @@
 <ul class="twitter-menu">
     {% for comic in site.data.comics %}
         {% assign comic_slug = comic.name | slugify %}
-        <li>
-        <a href="/comics/{{ comic_slug }}.html" title="{{ comic.name }}">{{ forloop.index }}</a>
-        </li>
+        {% if forloop.index == include.index %}
+            <li class="disabled">
+                {{ forloop.index }}
+            </li>
+        {% else %}
+            <li>
+                <a href="/comics/{{ comic_slug }}.html" title="{{ comic.name }}">{{ forloop.index }}</a>
+            </li>
+        {% endif %}
+       
     {% endfor %}
 </ul>
+
