Updates css to be better names

--- a/_includes/comic-menu.html
+++ b/_includes/comic-menu.html
@@ -1,4 +1,4 @@
-<ul class="twitter-menu">
+<ul class="inline-menu">
     {% for comic in site.data.comics %}
         {% assign comic_slug = comic.name | slugify %}
         {% if forloop.index == include.index %}
