--- a/_includes/tweet-menu.html
+++ b/_includes/tweet-menu.html
@@ -1,4 +1,4 @@
-<ul class="twitter-menu">
+<ul class="inline-menu">
     {% for period in site.data.tweets %}
         {% assign period_slug = period.name | slugify %}
         <li>
