--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,17 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZP8CG4KLJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RZP8CG4KLJ');
+</script>
     </head>
+
     <body>
 
         <div class="container">
@@ -56,14 +66,6 @@
 
 <script>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123008-9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-123008-9');
-</script>
 {% if page.comments %}
 <script type="text/javascript">
 var disqus_shortname = 'digigurucouk';
